--- a/education/education/doctype/student_leave_application/student_leave_application.json
+++ b/education/education/doctype/student_leave_application/student_leave_application.json
@@ -6,19 +6,30 @@
  "editable_grid": 1,
  "engine": "InnoDB",
  "field_order": [
+  "student_and_leave_details_section",
   "student",
   "student_name",
+  "college",
+  "programme",
   "column_break_3",
   "from_date",
   "to_date",
   "total_leave_days",
   "section_break_5",
-  "attendance_based_on",
-  "student_group",
-  "course_schedule",
-  "mark_as_present",
-  "column_break_11",
   "reason",
+  "sb_approver",
+  "approver",
+  "approver_name",
+  "column_break_bbyz",
+  "approver_designation",
+  "sb_attachment",
+  "attach_zqhy",
+  "joining_details_section",
+  "rejoining_date",
+  "approved_by_sso",
+  "cb",
+  "reason_for_late_rejoining",
+  "section_break_vccc",
   "amended_from"
  ],
  "fields": [
@@ -26,7 +37,7 @@
    "fieldname": "student",
    "fieldtype": "Link",
    "in_global_search": 1,
-   "label": "Student",
+   "label": "Student Code",
    "options": "Student",
    "reqd": 1
   },
@@ -58,13 +69,6 @@
    "reqd": 1
   },
   {
-   "default": "0",
-   "description": "Check this to mark the student as present in case the student is not attending the institute to participate or represent the institute in any event.\n\n",
-   "fieldname": "mark_as_present",
-   "fieldtype": "Check",
-   "label": "Mark as Present"
-  },
-  {
    "fieldname": "section_break_5",
    "fieldtype": "Section Break"
   },
@@ -83,46 +87,110 @@
    "read_only": 1
   },
   {
-   "allow_in_quick_entry": 1,
-   "default": "Student Group",
-   "fieldname": "attendance_based_on",
-   "fieldtype": "Select",
-   "label": "Attendance Based On",
-   "options": "Student Group\nCourse Schedule"
-  },
-  {
-   "allow_in_quick_entry": 1,
-   "depends_on": "eval:doc.attendance_based_on === \"Student Group\";",
-   "fieldname": "student_group",
-   "fieldtype": "Link",
-   "label": "Student Group",
-   "link_filters": "[]",
-   "mandatory_depends_on": "eval:doc.attendance_based_on === \"Student Group\";",
-   "options": "Student Group"
-  },
-  {
-   "allow_in_quick_entry": 1,
-   "depends_on": "eval:doc.attendance_based_on === \"Course Schedule\";",
-   "fieldname": "course_schedule",
-   "fieldtype": "Link",
-   "label": "Course Schedule",
-   "mandatory_depends_on": "eval:doc.attendance_based_on === \"Course Schedule\";",
-   "options": "Course Schedule"
-  },
-  {
-   "fieldname": "column_break_11",
-   "fieldtype": "Column Break"
-  },
-  {
    "fieldname": "total_leave_days",
    "fieldtype": "Float",
    "label": "Total Leave Days",
    "read_only": 1
+  },
+  {
+   "fetch_from": "student.company",
+   "fieldname": "college",
+   "fieldtype": "Link",
+   "label": "College",
+   "options": "Company",
+   "read_only": 1,
+   "reqd": 1
+  },
+  {
+   "fieldname": "student_and_leave_details_section",
+   "fieldtype": "Section Break",
+   "label": "<u>Student and Leave Details</u>"
+  },
+  {
+   "fieldname": "programme",
+   "fieldtype": "Link",
+   "label": "Programme",
+   "options": "Programme",
+   "read_only": 1,
+   "reqd": 1
+  },
+  {
+   "fieldname": "sb_attachment",
+   "fieldtype": "Section Break",
+   "label": "<u>Attachments</u>"
+  },
+  {
+   "fieldname": "attach_zqhy",
+   "fieldtype": "Attach",
+   "reqd": 1
+  },
+  {
+   "fieldname": "sb_approver",
+   "fieldtype": "Section Break",
+   "label": "<u>Approver Details</u>"
+  },
+  {
+   "fieldname": "approver",
+   "fieldtype": "Link",
+   "label": "Approver",
+   "options": "User",
+   "read_only": 1
+  },
+  {
+   "fetch_from": "approver.full_name",
+   "fieldname": "approver_name",
+   "fieldtype": "Data",
+   "label": "Approver Name",
+   "read_only": 1
+  },
+  {
+   "fieldname": "column_break_bbyz",
+   "fieldtype": "Column Break"
+  },
+  {
+   "fieldname": "approver_designation",
+   "fieldtype": "Link",
+   "label": "Approver Designation",
+   "options": "Designation",
+   "read_only": 1
+  },
+  {
+   "fieldname": "joining_details_section",
+   "fieldtype": "Section Break",
+   "label": "<u>Joining Details</u>"
+  },
+  {
+   "fieldname": "rejoining_date",
+   "fieldtype": "Date",
+   "label": "Rejoining Date"
+  },
+  {
+   "fieldname": "cb",
+   "fieldtype": "Column Break"
+  },
+  {
+   "depends_on": "eval:doc.rejoining_date > doc.to_date;",
+   "fieldname": "reason_for_late_rejoining",
+   "fieldtype": "Small Text",
+   "label": "Reason for Late Rejoining",
+   "mandatory_depends_on": "eval:doc.rejoining_date > doc.to_date;"
+  },
+  {
+   "default": "0",
+   "fieldname": "approved_by_sso",
+   "fieldtype": "Check",
+   "label": "Approved By SSO",
+   "read_only": 1
+  },
+  {
+   "fieldname": "section_break_vccc",
+   "fieldtype": "Section Break",
+   "label": "<u>More Info.<u></u></u>"
   }
  ],
  "is_submittable": 1,
  "links": [],
- "modified": "2023-12-19 10:17:31.704531",
+ "modified": "2025-08-27 12:20:07.200910",
  "modified_by": "Administrator",
  "module": "Education",
  "name": "Student Leave Application",
@@ -168,7 +236,7 @@
    "share": 1
   }
  ],
- "quick_entry": 1,
+ "row_format": "Dynamic",
  "show_name_in_global_search": 1,
  "sort_field": "modified",
  "sort_order": "DESC",
